k3s/k9s-ui/k9s-ui.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: k9s-ui
spec:
  selector:
    app: k9s-ui
  ports:
  - port: 7681
    targetPort: 7681
    nodePort: 30092
  type: NodePort
